# scratchy

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  ccpp.yml  ci.yml  test.yml
include/scratchy/: BitMask.hpp  BitReader.hpp  BitWriter.hpp  InputBitStream.hpp  OutputBitStream.hpp  scratchy.h
src/: BitReader.cpp  BitWriter.cpp  InputBitStream.cpp  OutputBitStream.cpp
test/: test.cpp
test/feature/: SerializationTest.cpp  StreamingTest.cpp
test/unit/: InputBitStreamTest.cpp  OutputBitStreamTest.cpp
